Feedback Support #16529 Containerize seqdb-api and deploy on dev server
https://redmine.biodiversity.agr.gc.ca/issues/16529

-Added a user to run the app in the container.
-Added 644 permission to the jar.
-Removed /tmp volume from Dockerfile.
-Added java memory options to entrypoint line.