@@ -1,5 +1,6 @@
 FROM openjdk:8-jre-slim
-VOLUME /tmp
-COPY target/seqdb.api-*.jar /seqdb-api.jar
+RUN useradd -s /bin/bash user
+USER user
+COPY --chown=644 target/seqdb.api-*.jar /seqdb-api.jar
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","/seqdb-api.jar"]
+ENTRYPOINT ["java","-XX:+UnlockExperimentalVMOptions","-XX:+UseCGroupMemoryLimitForHeap","-jar","/seqdb-api.jar"]
